2007-06-01 Hal Rosenstock <halr@voltaire.com>

	* Makefile.am: Add ibidsverify

	* scripts/ibidsverify.pl, man/ibidsverify.8: Add script
	  and man page for ibidsverify

2007-05-31 Hal Rosenstock <halr@voltaire.com>

	* man/ibprintca.8, man/ibprintswitch.8, man/ibprintrt.8:
	  Add description of list capability

	* Makefile.am, configure.in: Add ibdatacounters

	* scripts/ibdatacounters.in, man/ibdatacounters.8: Add
	  script and man page for subnet wide data counters

	* configure.in: Change IBSCRIPTPATH from bindir to sbindir 

2007-05-30 Hal Rosenstock <halr@voltaire.com>

	* Makefile.am, configure.in: Add ibrouters and ibprintrt.pl

	* scripts/ibrouters.in, scripts/ibprintrt.pl,
	  man/ibrouters.8, man/ibprintrt.8: Add scripts and man pages
	  for display of IB routers

	* scripts/ibqueryerrors.pl: Add GUID to output line for ports 

	* scripts/ibcheckerrs.in, scripts/ibcheckport.in,
	  scripts/ibcheckportstate.in, scripts/ibcheckportwidth.in,
	  scripts/ibdatacounts.in: Add lid and port into verbose output

	* scripts/ibcheckerrs.in, scripts/ibcheckport.in,
	  scripts/ibdatacounts.in: Change portnum to port in output

	* Makefile.am, configure.in: Add ibdatacounts

	* scripts/ibdatacounts.in, man/ibdatacounts.8: Add script
	  to display only data counters and associated man page

2007-05-26 Hal Rosenstock <halr@voltaire.com>

	* scripts/IBswcountlimits.pm: Fix node description parsing
	  for switches

	* scripts/iblinkinfo.pl: Add peer port link width and speed
	  validation

2007-05-25 Hal Rosenstock <halr@voltaire.com>

	* scripts/IBswcountlimits.pm: Add support for routers

	* scripts/iblinkinfo.pl: Display remote LID with peer port info

	* scripts/IBswcountlimits.pm: Add support for rem_lid in
	  get_link_ends subroutine 

	* src/ibportstate.c: Handle peer ports at 1x that
	  should be wider and 2.5 Gbps that should be faster

	* src/ibportstate.c: Add LinkSpeed/Width related components
	  to output

2007-05-24 Hal Rosenstock <halr@voltaire.com>
